# win-privacy-automator

./: LICENSE  README.md  main.py  pyproject.toml  run_app.py
src/: __init__.py  control_type.py  diagnostics_and_feedback_page.py  optimize_privacy.py  privacy_and_security_settings.py
src/privacy_and_security/: __init__.py  privacy_and_security_settings.py
